[tool.poetry]
name = "mockils"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
mistune = "^3.0.2"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.2"
fastapi = {extras = ["standard"], version = "^0.115.8"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
